Polling and notification

--- a/AppSpan/app/src/main/AndroidManifest.xml
+++ b/AppSpan/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         </receiver>
 
         <service android:name=".Monitor" />
+        <service android:name=".NotificationService" />
+        <activity android:name=".MonitorCurrentApp"
+            android:label="options"/>
 
 
     </application>
